--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-streamlit
-streamlit_authenticate
-python-dotenv
+langchain
+langchain-aws
 boto3
+streamlit
+streamlit-authenticator
+pyarrow
+python-dotenv
