--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,10 @@
 version: '3'
 services:
-  python3:
+  streamlit-app:
     restart: always
     env_file: '.env'
     build: .
-    container_name: 'python3'
+    container_name: 'chatbot'
     working_dir: '/root/'
     volumes:
       - ./data:/root/data
